--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,35 +14,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 21:33]
+#+CAPTION: Clock summary at [2016-10-15 Sat 22:25]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:04* |       |       | 100.0 |
+| *Total time*                                                                | *49:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:04   |       |       | 100.0 |
-| Active                                                                      |         | 49:04 |       | 100.0 |
+| Stories                                                                     | 49:55   |       |       | 100.0 |
+| Active                                                                      |         | 49:55 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.6 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.2 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.0 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.4 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  31.0 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.5 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.5 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.4 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  24.1 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  23.7 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.7 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.8 |
-| COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.5 |
-| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.4 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.7 |
+| COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.4 |
+| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.3 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
-| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.4 |
-| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.2 |
+| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.3 |
+| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.1 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
+| COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -575,6 +576,30 @@ We now have all the infrastructure of this to work. Do a simple proof
 of concept by looking at handcrafted types that implement io via
 regexes, remove the regexes and update the meta-data.
 
+*** COMPLETED Generate skeleton for "non-generatable" files           :story:
+    CLOSED: [2016-10-15 Sat 22:00]
+    CLOCK: [2016-10-15 Sat 22:01]--[2016-10-15 Sat 22:25] =>  0:24
+    CLOCK: [2016-10-15 Sat 21:33]--[2016-10-15 Sat 22:00] =>  0:27
+
+We probably just need to remove the hacks to be compatible with
+legacy: reset file contents when overwrite is false.
+
+*Previous Understanding*
+
+We are using non-generatable files quite a lot (at present called
+"services"). Every time we do this we end up copying manually the
+contents of the forward declarations to setup the skeleton of the
+file. Since we already have all of the boiler plate code such as
+licence, header guards, etc, we could just create a skeleton to stop
+us from having to copy and paste it.
+
+In addition to the class definition, it should also define all of the
+automatic constructors, and add a private section at the
+bottom. Ideally we should also generate stubs for all methods - adding
+a blank implementation with return types where required and commented
+out parameters, to make the code compilable out of the box. This will
+be possible once we start supporting operations.
+
 *** Add description to profile and value templates                    :story:
 
 It would be nice to put some kind of comments as to what the profile
@@ -597,27 +622,6 @@ of "disable odb" and "disable cmake". This fails because disable odb
 inherits from enable all facets; when we merge against "disable cmake"
 we do not know that cmake was enabled via "enable all facets" and so
 this takes priority.
-
-*** Generate skeleton for "non-generatable" files                     :story:
-
-We probably just need to remove the hacks to be compatible with
-legacy: reset file contents when overwrite is false.
-
-*Previous Understanding*
-
-We are using non-generatable files quite a lot (at present called
-"services"). Every time we do this we end up copying manually the
-contents of the forward declarations to setup the skeleton of the
-file. Since we already have all of the boiler plate code such as
-licence, header guards, etc, we could just create a skeleton to stop
-us from having to copy and paste it.
-
-In addition to the class definition, it should also define all of the
-automatic constructors, and add a private section at the
-bottom. Ideally we should also generate stubs for all methods - adding
-a blank implementation with return types where required and commented
-out parameters, to make the code compilable out of the box. This will
-be possible once we start supporting operations.
 
 *** Generate formatter interfaces                                      :epic:
 
