--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,36 +14,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 22:32]
+#+CAPTION: Clock summary at [2016-10-15 Sat 22:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:00* |       |       | 100.0 |
+| *Total time*                                                                | *50:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:00   |       |       | 100.0 |
-| Active                                                                      |         | 50:00 |       | 100.0 |
+| Stories                                                                     | 50:23   |       |       | 100.0 |
+| Active                                                                      |         | 50:23 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:29 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.6 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.0 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.4 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.4 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.2 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.4 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  23.7 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  23.5 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.7 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.7 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.4 |
 | COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.3 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
-| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.3 |
-| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.1 |
+| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.2 |
+| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.0 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.7 |
+| STARTED Fix transformer tests and hydrator tests                            |         |       |  0:11 |   0.4 |
+| STARTED Merge profiles with processed object in yarn.dia                    |         |       |  0:12 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -601,6 +603,19 @@ a blank implementation with return types where required and commented
 out parameters, to make the code compilable out of the box. This will
 be possible once we start supporting operations.
 
+*** STARTED Fix transformer tests and hydrator tests                  :story:
+    CLOCK: [2016-10-15 Sat 22:32]--[2016-10-15 Sat 22:43] =>  0:11
+
+A number of tests got disabled as part of the dynamic refactor. Fix
+them.
+
+*** STARTED Merge profiles with processed object in yarn.dia          :story:
+    CLOCK: [2016-10-15 Sat 22:44]--[2016-10-15 Sat 22:56] =>  0:12
+
+We have a lot of unnecessary fluff in yarn.dia with the separation
+between processed objects, profiled objects and profiles. In truth we
+just need the processed object, with all of the necessary information.
+
 *** Add description to profile and value templates                    :story:
 
 It would be nice to put some kind of comments as to what the profile
@@ -753,11 +768,6 @@ Further thoughts:
   instantiates stitch (probably within quilt) with the parameters and
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
-
-*** Fix transformer tests and hydrator tests                          :story:
-
-A number of tests got disabled as part of the dynamic refactor. Fix
-them.
 
 *** Clean up annotations and configuration in stitch                  :story:
 
