--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,38 +14,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 23:09]
+#+CAPTION: Clock summary at [2016-10-15 Sat 23:48]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:35* |       |       | 100.0 |
+| *Total time*                                                                | *51:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:35   |       |       | 100.0 |
-| Active                                                                      |         | 50:35 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:29 |   1.0 |
+| Stories                                                                     | 51:12   |       |       | 100.0 |
+| Active                                                                      |         | 51:12 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:29 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.8 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   7.9 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   7.8 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.3 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.0 |
-| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  29.7 |
+| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.9 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.4 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  23.4 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  23.1 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.7 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.7 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.6 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.4 |
 | COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.3 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
-| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.2 |
-| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.0 |
+| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.1 |
+| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.9 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.7 |
 | STARTED Fix transformer tests and hydrator tests                            |         |       |  0:11 |   0.4 |
-| STARTED Merge profiles with processed object in yarn.dia                    |         |       |  0:24 |   0.8 |
+| STARTED Merge profiles with processed object in yarn.dia                    |         |       |  1:01 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -610,6 +610,7 @@ A number of tests got disabled as part of the dynamic refactor. Fix
 them.
 
 *** STARTED Merge profiles with processed object in yarn.dia          :story:
+    CLOCK: [2016-10-15 Sat 23:10]--[2016-10-15 Sat 23:47] =>  0:37
     CLOCK: [2016-10-15 Sat 22:57]--[2016-10-15 Sat 23:09] =>  0:12
     CLOCK: [2016-10-15 Sat 22:44]--[2016-10-15 Sat 22:56] =>  0:12
 
