--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,38 +14,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-16 Sun 00:51]
+#+CAPTION: Clock summary at [2016-10-16 Sun 12:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *52:15* |       |       | 100.0 |
+| *Total time*                                                                | *54:52* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 52:15   |       |       | 100.0 |
-| Active                                                                      |         | 52:15 |       | 100.0 |
+| Stories                                                                     | 54:52   |       |       | 100.0 |
+| Active                                                                      |         | 54:52 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:29 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.8 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.5 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.3 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   7.7 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.3 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  29.1 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   7.3 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.2 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  27.7 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.9 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.3 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.1 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  22.6 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  21.6 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.6 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.5 |
-| COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.3 |
-| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.2 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.4 |
+| COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.2 |
+| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.0 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
-| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.0 |
-| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.8 |
+| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   4.8 |
+| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.4 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
-| COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.6 |
-| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   4.0 |
-| STARTED Fix yarn.dia tests                                                  |         |       |  0:11 |   0.4 |
+| COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.5 |
+| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.8 |
+| COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   5.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -614,7 +614,10 @@ We have a lot of unnecessary fluff in yarn.dia with the separation
 between processed objects, profiled objects and profiles. In truth we
 just need the processed object, with all of the necessary information.
 
-*** STARTED Fix yarn.dia tests                                        :story:
+*** COMPLETED Fix yarn.dia tests                                      :story:
+    CLOSED: [2016-10-16 Sun 12:18]
+    CLOCK: [2016-10-16 Sun 12:05]--[2016-10-16 Sun 12:18] =>  0:13
+    CLOCK: [2016-10-16 Sun 09:40]--[2016-10-16 Sun 12:04] =>  2:24
     CLOCK: [2016-10-15 Sat 22:32]--[2016-10-15 Sat 22:43] =>  0:11
 
 A number of tests got disabled as part of the dynamic refactor in
