--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 17:49]
+#+CAPTION: Clock summary at [2016-10-17 Mon 18:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *63:41* |       |       | 100.0 |
+| *Total time*                                                                | *63:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 63:41   |       |       | 100.0 |
-| Active                                                                      |         | 63:41 |       | 100.0 |
+| Stories                                                                     | 63:55   |       |       | 100.0 |
+| Active                                                                      |         | 63:55 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
@@ -30,11 +30,11 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.3 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   1.9 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  23.9 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  23.8 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.7 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  18.6 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  18.5 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.5 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   2.9 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   1.9 |
@@ -46,7 +46,7 @@
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.3 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.2 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.4 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  8:19 |  13.1 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  8:33 |  13.4 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 17:50]--[2016-10-17 Mon 18:04] =>  0:14
     CLOCK: [2016-10-17 Mon 17:32]--[2016-10-17 Mon 17:49] =>  0:17
     CLOCK: [2016-10-17 Mon 17:11]--[2016-10-17 Mon 17:31] =>  0:20
     CLOCK: [2016-10-17 Mon 16:40]--[2016-10-17 Mon 17:10] =>  0:30
@@ -706,14 +707,15 @@ Notes:
   add it to the formatter. This will cause a lot of breakage.
 - we need to go through the expanders and figure out if we are
   referring to formatters when we mean archetypes and vice-versa.
+- rename formatter container to repository.
 
 *** Introduce artefact sources                                        :story:
 
 - introduce the concept of artefact source: stock formatter
   (current), wale formatter, wale and stitch formatter,
   handcrafted. Other possible types: null formatter, copy formatter.
-- rename formatters to stock formatters: container is repository (replace
-  formatter prefixes in attributes with stock formatter)
+- rename formatters to stock formatters: in repository replace
+  formatter prefixes in attributes with stock formatter.
 
 *** STARTED Integration of stitch and dogen                           :story:
     CLOCK: [2016-10-16 Sun 13:44]--[2016-10-16 Sun 14:11] =>  0:27
